# promptmanager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/promptmanager/: __init__.py
src/promptmanager/api/: __init__.py  app.py
src/promptmanager/api/routes/: __init__.py  compression.py  enhancement.py  generation.py  health.py  pipeline.py  validation.py
src/promptmanager/api/schemas/: __init__.py  requests.py  responses.py
src/promptmanager/cli/: __init__.py  main.py
src/promptmanager/cli/commands/: __init__.py  compress.py  enhance.py  generate.py
src/promptmanager/compression/: __init__.py  compressor.py
src/promptmanager/compression/strategies/: __init__.py  base.py  code.py  hybrid.py  lexical.py  statistical.py
src/promptmanager/compression/tokenizers/: __init__.py  base.py  hf_counter.py  registry.py  tiktoken_counter.py
src/promptmanager/control/: __init__.py  manager.py  validation.py  versioning.py
src/promptmanager/core/: __init__.py  base.py  config.py  exceptions.py  registry.py  types.py
src/promptmanager/enhancement/: __init__.py  enhancer.py
src/promptmanager/enhancement/analyzers/: __init__.py  intent_detector.py  quality_scorer.py
src/promptmanager/enhancement/rules/: __init__.py  builtin.yaml
src/promptmanager/enhancement/transformers/: __init__.py  llm_enhancer.py  rule_engine.py
src/promptmanager/generation/: __init__.py  generator.py
src/promptmanager/generation/styles/: __init__.py  style_registry.py
src/promptmanager/generation/templates/: __init__.py  engine.py  slot_filler.py
src/promptmanager/generation/templates/builtin/: chain_of_thought.j2  code_generation.j2  few_shot.j2  zero_shot.j2
src/promptmanager/pipeline/: __init__.py  pipeline.py
src/promptmanager/providers/: __init__.py  anthropic_provider.py  base.py  litellm_adapter.py  openai_provider.py
tests/: conftest.py
tests/integration/: test_prompt_manager.py
tests/unit/: test_compression.py  test_control.py  test_core.py  test_enhancement.py  test_generation.py  test_pipeline.py
