[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptmanager"
version = "0.1.0"
description = "Production-ready LLM Prompt Management System - Control, Enhance, Compress, and Generate prompts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Hesham Haroun"}
]
keywords = ["llm", "prompt", "compression", "enhancement", "generation", "ai", "nlp", "gpt", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.24",
    "tiktoken>=0.5",
    "jinja2>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
compression = [
    "sentence-transformers>=2.2",
    "transformers>=4.30",
    "torch>=2.0",
    "numpy>=1.24",
]
api = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
]
cli = [
    "click>=8.0",
    "rich>=13.0",
]
providers = [
    "openai>=1.0",
    "anthropic>=0.5",
    "litellm>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
]
all = [
    "promptmanager[compression,api,cli,providers]"
]

[project.scripts]
promptmanager = "promptmanager.cli.main:main"
pm = "promptmanager.cli.main:main"

[project.urls]
Homepage = "https://github.com/hesham-haroun/promptmanager"
Documentation = "https://github.com/hesham-haroun/promptmanager#readme"
Repository = "https://github.com/hesham-haroun/promptmanager"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
promptmanager = [
    "py.typed",
    "enhancement/rules/*.yaml",
    "generation/templates/builtin/*.j2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=promptmanager --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.isort]
known-first-party = ["promptmanager"]
